# rust-8008

./: .gitignore  Cargo.toml
src/: drum_machine.rs  envelope.rs  filters.rs  main.rs  synth.rs  waveforms.rs
