[package]

name = "8008"
description = "A simple sound machine."
version = "0.0.0"
authors = ["jj <jj.weber@gmail.com>"]
readme = "README.md"
keywords = ["synthesis", "dsp", "audio", "music", "instrument"]
license = "MIT"
repository = "https://github.com/zjjw/rust-8008.git"
homepage = "https://github.com/zjjw/rust-8008"


[dependencies]
dsp-chain = "0.12.0"
mindtree_utils = "0.3.0"
portaudio = "0.6.3"
