[package]

name = "8008"
description = "A simple drum machine."
version = "0.0.0"
authors = ["jj <jj.weber@gmail.com>"]
readme = "README.md"
keywords = ["synthesis", "dsp", "audio", "music", "instrument"]
license = "MIT"
repository = "https://github.com/zjjw/rust-8008.git"
homepage = "https://github.com/zjjw/rust-8008"


[dependencies]
clippy = "*"
instrument = "0.2.0"
